--- a/app/views/triggers/index.html.erb
+++ b/app/views/triggers/index.html.erb
@@ -4,6 +4,7 @@
     <tr>	
 		<th>Currency Name</th>
 		<th>Threshold</th>
+		<th>Voucher Value</th>
 		<th>Earn on Free</th>
 		<th>Auto Burn</th>
 		<th>Auto Voucher</th>
@@ -20,6 +21,9 @@
 			</td>	
 			<td>
 				<%= t.threshold %>
+			</td>
+			<td>
+				<%= t.voucher_value %>
 			</td>
 			<td>
 				<%= t.earn_on_free %>
