--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,7 @@
 				<li><%= link_to "New Transaction", new_txn_path  %></li>
 				<li><%= link_to "New Member", new_member_path  %></li>
 				<li><%= link_to "Triggers", triggers_path  %></li>
+				<li><%= link_to "Reset All", reset_index_path, :method => :post  %></li>
               </ul>
             </div><!--/.well -->
           </div><!--/span-->
