--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -3,8 +3,11 @@
   <thead>
     <tr>	
 		<th>Name</th>
-		<th>Points</th>
-		<th>Total Points</th>
+		<th>Currency</th>
+		<th>Balance</th>
+		<th>Qty Purchased</th>
+		<th>Total Free</th>
+		<th>Cards</th>		
 		<th>Vouchers</th>
 		<th>On Next Purchase</th>			
 		<th>Actions</th>		
@@ -12,29 +15,49 @@
   </thead>
   <tbody>
 	<% for m in @members %>
-		<tr>
+		<% if m.currencies.empty? %>
 			<td>
 				<%= link_to m.name, member_path(m) %>
-			</td>	
-			<td>
-				<%= m.points %>
-			</td>	
-			<td>
-				<%= m.total_pts %>
-			</td>	
-			<td>
-				<%= m.vouchers %>
-				<% if m.vouchers > 0 %>
-					<%= link_to 'Burn', burn_member_path(m), :method => :post%>
-				<% end %>
-			</td>	
-			<td>
-				<%= m.voucher_on_next %>
-			</td>	
-			<td>
-				<%= link_to 'Edit', edit_member_path(m)%>
-				<%= link_to 'Reset', reset_member_path(m), :method => :post%>
 			</td>
-		</tr>
+		<%end%>
+		<% for currency in m.currencies %>
+			<tr>
+				<td>
+					<%= link_to m.name, member_path(m) %>
+				</td>	
+				<td>
+					<%= currency.name %>
+				</td>
+				
+				<td>
+					<%= currency.points %>
+				</td>	
+				<td>
+					<%= currency.total_pts %>
+				</td>	
+				<td>
+					<%= currency.total_free %>
+				</td>
+				<td>
+					<% for card in currency.cards %>
+					<p>
+						Unit: <%= card.unit%>
+						Burned: <%= card.burned %>
+						<% if !card.burned %>				
+							<%= link_to 'Burn', burn_card_member_path(m, :currency => currency.id, :card => card.id), :method => :post%>
+						<% end %>
+					</p>
+					<% end %>
+				</td>									
+				<td>
+					<%= m.voucher_on_next %>					
+				</td>	
+				<td>
+					<%= link_to 'Edit', edit_member_path(m)%>
+					<%= link_to 'Reset', reset_member_path(m), :method => :post%>
+				</td>
+			</tr>
+		<% end %>
+
 	<%end%>	
 </table>
